--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@
                     <img src="img/1.jpg" alt="">
                 </div>
                 <div class="port-content">
-                    <h3> gaphic Design</h3>
+                    <h3> Joke Generator</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, quod? Atque eos quisquam,
                         tempora accusantium ullamLorem ipsum dolor sit amet consectetur</p>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
+                        <a href="https://mr-ketan21.github.io/qoute-generator/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="port-box">
