--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     <h3> Joke Generator</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, quod? Atque eos quisquam,
                         tempora accusantium ullamLorem ipsum dolor sit amet consectetur</p>
-                        <a href="https://mr-ketan21.github.io/qoute-generator/"><i class='bx bx-link-external'></i></a>
+                        <a href=" https://mr-ketan21.github.io/joke-generator/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="port-box">
