--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
                 </div>
                 <div class="port-content">
                     <h3> Joke Generator</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, quod? Atque eos quisquam,
-                        tempora accusantium ullamLorem ipsum dolor sit amet consectetur</p>
+                    <p>"Designed and developed a dynamic Joke Generator web application using HTML, CSS, and JavaScript,
+                        with API integration, offering instant humor at the click of a button."</p>
                         <a href=" https://mr-ketan21.github.io/joke-generator/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
