cv link updated

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                  </div>
                  <div class="btn-box">
-                    <a href="#" class="btn">Download CV</a>
+                    <a href="https://drive.google.com/file/d/1SUpR6W-bEnKGj3k4hkoYJW5W2w34Wd0j/view?usp=drive_link" class="btn">Download CV</a>
                     <a href="#" class="btn">Hire me Now</a>
                  </div>
                  <div class="social-icons">
