--- a/index.html
+++ b/index.html
@@ -35,12 +35,11 @@
                     <span class="word">UX/UI Developer</span> -->
                 </h3>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, quod? Atque eos quisquam,
-                 tempora accusantium ullam.</p>
+            <p>"Passionate and curious, I'm a fresh creative eager to explore the world of IT Industry. With a blend of determination and an eye for detail, I aspire to turn ideas into reality. Through my portfolio, join me on my journey of learning, growth, and turning imagination into tangible accomplishments."</p>
                  <div class="info-box">
                     <div class="email-info">
                         <h5>Email :</h5>
-                        <span>Ketan@gmail.com</span>
+                        <span>Ketanpro21@gmail.com</span>
 
                     </div>
                     <div class="behance-info">
@@ -50,13 +49,13 @@
                  </div>
                  <div class="btn-box">
                     <a href="https://drive.google.com/file/d/1SUpR6W-bEnKGj3k4hkoYJW5W2w34Wd0j/view?usp=drive_link" class="btn">Download CV</a>
-                    <a href="#" class="btn">Hire me Now</a>
+                    <a href="#contact" class="btn">Hire me Now</a>
                  </div>
                  <div class="social-icons">
-                    <a href="#"><i class='bx bxl-facebook'></i></a>
+                    <a href="#"><i class='bx bxl-linkedin'></i></a>
                     <a href="#"><i class='bx bxl-instagram'></i></a>
                     <a href="#"><i class='bx bxl-twitter'></i></a>
-                    <a href="#"><i class='bx bxl-github'></i></a>
+                    <a href="https://github.com/mr-ketan21"><i class='bx bxl-github'></i></a>
                  </div>
         </div>
         <div class="home-image scroll-scale">
@@ -74,27 +73,34 @@
           <span>let me introduce myself</span>  
           <h2>About me</h2>
           <h3>A story of good</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, quod? Atque eos quisquam,
-            tempora accusantium ullamLorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, quod? Atque eos quisquam,
-            tempora accusantium ullam</p>
+          <p>Highly motivated and skilled individual seeking an entry-level position in the field of
+             coding,development, and problem-solving.I aim to contribute to a dynamic team while continuously 
+             learning and growing as a professional. With a natural ability for problem-solving and a knack 
+             for effective communication.<span id="dots">...</span> <j id="more" >
+            "Passionate and curious, I'm a fresh creative eager to explore the world of IT Industry.
+             With a blend of determination and an eye for detail, I aspire to turn ideas into reality.
+              Through my portfolio, join me on my journey of learning, growth, and turning imagination into tangible accomplishments."</j></p>
+
+          <!-- <button onclick="myFunction()" id="myBtn">Read more</button> -->
+
 
             <div class="btn-box">
-               <a href="#" class="btn">Read More!</a>
+               <a class="btn"  onclick="myFunction()" id="myBtn" style="cursor : pointer">Read More!</a>
             </div>
         </div>
     </section>
     <section id="services" class="Services">
         <div class="main-text scroll-scale">
             <span>what i will do for you</span>
-            <h2>Our services</h2>
+            <h2>My services</h2>
         </div>
         <div class="section-services scroll-scale ">
         <div class="service-box">
             <i class='bx bxs-layer service-icon'></i> 
             <h3>Graphic designer</h3>  
-            <p>Lorem ipsum dolor sit amet cons
-                ectetur, adipisicing elit. Dolore, quod? Atque eos quisquam,
-                tempora accusantium ullamLorem ipsum dolor sit amet consectetur
+            <p>"Beyond coding, I also wield the brush of creativity as a graphic designer.
+                  I bring life to designs that resonate and captivate.
+                   Explore my portfolio to witness the fusion of code and artistry."
             </p>
             <div class="btn-box service-btn">
                 <a href="a" class="btn">Read More</a>
@@ -103,9 +109,10 @@
             </div>
             <div class="service-box">
                 <i class='bx bx-code-alt service-icon' ></i>
-                <h3>Graphic designer</h3>  
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, quod? Atque eos quisquam,
-                    tempora accusantium ullamLorem ipsum dolor sit amet consectetur
+                <h3>UI  Development</h3>  
+                <p>Specializing in UI development, I craft captivating and interactive 
+                    user interfaces  My passion lies in bringing ideas to life through
+                     pixel-perfect code, enhancing user experiences across the digital landscape
                 </p>
                 <div class="btn-box service-btn ">
                     <a href="a" class="btn">Read More</a>
@@ -114,9 +121,10 @@
             </div>
             <div class="service-box ">
                 <i class='bx bx-desktop service-icon' ></i>
-                <h3>Graphic designer</h3>  
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore, quod? Atque eos quisquam,
-                    tempora accusantium ullamLorem ipsum dolor sit amet consectetur
+                <h3>Responsive Design</h3>  
+                <p>Crafting captivating web experiences across all devices. 
+                    Specializing in responsive design to ensure your website shines\
+                     seamlessly on every screen size, from desktop to mobile
                 </p>
                 <div class="btn-box service-btn">
                     <a href="a" class="btn">Read More</a>
